# pyfunctest

./: .gitignore  LICENSE  README.md  fmods.md  setup.cfg  setup.py
data/mods/ftp/: .env  .yaml  start-ftp
data/mods/http/: .env  .yaml
data/mods/kafka/: .env  .yaml  docker-compose.yml
data/mods/minio/: .env  .yaml
data/mods/mysql/: .env  .yaml  50-server.cnf
data/mods/mysql/migrations/: 00_struct_db.up.sql
data/mods/nginx/: .env  .yaml  test.conf
data/mods/pg/: .env  .yaml
data/mods/pg/migrate/: 20210401172631_schedule_create_table.up.sql  20210401172634_create_job_table.up.sql
data/mods/rabbitmq/: .env  .yaml
data/mods/srv-report/: .env  .yaml
data/mysql/: create_table.sql  create_tables.sql  insert.sql
data/postgre/: create_table.sql  create_tables.sql  insert.sql
fmods/: fmods.py
src/: docker.py  fmod.py  fmod_db.py  fmods.py  fmods_test.py  ftp.py  git.py  http.py  httpserver.py  kafka.py  lfs.py  migrate.py  minio.py  mysql.py  postgre.py  rabbitmq.py
src/mods/pg/: .env
src/test/: docker_test.py  fmods_test.py  ftp_test.py  git_test.py  http_test.py  kafka_test.py  minio_test.py  mysql_test.py  postgre_test.py  rabbitmq_test.py
